# Dissector

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Dockerfile  Dockerfile.mac  MLX_SAM3_ISSUES.md  PIPELINE_CHANGES_ANALYSIS.md  README.mac.md  README.md  batch_upper3.py  cli.py  ffxiv_gear_seg_pipeline.py  ffxiv_gear_seg_rebuild.py  pyproject.toml  temp_old.py
env/mac/: pyproject.toml
env/windows/: pyproject.toml
ffxiv_seg/: __init__.py  cli.py  pipeline.py
k8s/: README.md  deployment.yaml  pvc.yaml
src/: api.py  cli.py  pipeline.py
src/dissector/: __init__.py  __main__.py  app.py  backend.py  body_parts_segmentation.py  constants.py  model_loader.py  pipeline.py  sam3_backend.py  segmentation.py
