[project]
name = "dissector"
version = "0.1.0"
description = "Dissector - FFXIV gear segmentation (head/upper/lower/shoes/hands)"
authors = [
    {name = "ricterzheng",email = "ricterzheng@tencent.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "torch (==2.7.0)",
    "torchvision (==0.22.0)",
    "transformers (>=4.57.3,<5.0.0)",
    "sam3 (>=0.1.2,<0.2.0)",
    "psutil (>=7.2.1,<8.0.0)",
    "fastapi (>=0.115.0,<1.0.0)",
    "uvicorn[standard] (>=0.32.0,<1.0.0)",
    "python-multipart (>=0.0.12,<1.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch-cu126"}
torchvision = {source = "pytorch-cu126"}

[tool.poetry]
packages = [{include = "dissector", from = "src"}]
