[project]
name = "dissector"
version = "0.1.0"
description = "Dissector - FFXIV gear segmentation (head/upper/lower/shoes/hands)"
authors = [
    {name = "ricterzheng",email = "ricterzheng@tencent.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "transformers (>=4.57.3,<5.0.0)",
    "psutil (>=7.2.1,<8.0.0)",
    "fastapi (>=0.115.0,<1.0.0)",
    "uvicorn[standard] (>=0.32.0,<1.0.0)",
    "python-multipart (>=0.0.12,<1.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"

[tool.poetry]
packages = [{include = "dissector", from = "src"}]

[tool.poetry.dependencies]
# 通用依赖
python = ">=3.12,<3.15"
torch = "==2.7.0"
torchvision = "==0.22.0"

# Windows/Linux: Ultralytics 后端
ultralytics = {version = ">=8.3.247,<9.0.0", markers = "sys_platform != 'darwin'"}

# macOS: MLX 后端
mlx = {version = "^0.19.0", markers = "sys_platform == 'darwin'"}
mlx-lm = {version = "^0.19.0", markers = "sys_platform == 'darwin'"}
sam3 = {git = "https://github.com/Deekshith-Dade/mlx_sam3.git", markers = "sys_platform == 'darwin'"}

# 注意:
# - Windows/Linux: 推荐使用 PyTorch CUDA 版本，可通过以下方式安装:
#   pip install torch==2.7.0 torchvision==0.22.0 --index-url https://download.pytorch.org/whl/cu126
# - macOS: 使用标准 PyTorch 版本即可，MLX SAM3 会自动从 GitHub 安装
