[project]
name = "dissector"
version = "0.1.0"
description = "Dissector - FFXIV gear segmentation (head/upper/lower/shoes/hands) - macOS"
authors = [
    {name = "Ricter Z",email = "ricterzheng@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "dissector", from = "../../src"}]

[tool.poetry.dependencies]
# Common dependencies
python = ">=3.13,<3.15"
opencv-python = ">=4.12.0.88,<5.0.0.0"
transformers = ">=4.57.3"
psutil = ">=7.2.1,<8.0.0"
fastapi = ">=0.115.0,<1.0.0"
uvicorn = ">=0.32.0,<1.0.0"
python-multipart = ">=0.0.12,<1.0.0"
torch = ">=2.9.0"
torchvision = ">=0.24.1"

# macOS: MLX backend
mlx = ">=0.30.0"
mlx-lm = ">=0.30.0"
mlx-sam3 = {path = "mlx_sam3"}

